# MAC

v.0.0/: __init__.py  main.py
v.0.0/MetamaterialAnalysisCode/: __init__.py  setup.py
v.0.0/MetamaterialAnalysisCode/_modules/: _centers_RPA.py
v.0.0/MetamaterialAnalysisCode/classes/: MACAnalysis.py  MACCell.py  MACElement.py  MACGlobals.py  MACMaterial.py  MACModel.py  MACNode.py  MACNonLinear.py  MACProperty.py  MACStructure.py  MACSubcase.py  MACTable.py
v.0.0/MetamaterialAnalysisCode/modules/: MACRun.py  clases.py  prueba.py  writer.py
v.0.0/TEST/: cubos.py  leading_edge.py  test_1.py
v.0.0/modules/: cell.py  clases.py  reader.py
v.1.0/MetamaterialAnalysisCode/: __init__.py  pyproject.toml  setup.py
v.1.0/MetamaterialAnalysisCode/_modules/: _centers_RPA.py
v.1.0/MetamaterialAnalysisCode/classes/: MACCell.py  MACElement.py  MACLoadCase.py  MACMaterial.py  MACModel.py  MACStructure.py
v.1.0/TEST/: cubos.py  leading_edge.py  unicell.py
