[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"
[project]
name = "Metamaterial_Analysis_Code"
version = "1.0"
license = {file = "LICENSE"}
authors = [
  { name="Manuel Sánchez García", email="msg.aerospace@gmail.com" },
]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24.0",]
description = "Package that cretaes metamaterial FEM models"
readme = "README.md"
classifiers = [
	"Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "License :: MIT",
    "Operating System :: OS Independent",
	"Topic :: Scientific/Engineering",
]
keywords = ["MAC", "Preprocessing", "Metamaterial", "FEM"]

[project.urls]
"GAMOSINOS" = "https://www.upm.es/observatorio/vi/index.jsp?pageac=grupo.jsp&idGrupo=648"
"LinkedIn" = "www.linkedin.com/in/manuel-sánchez-garcía-8aa683232"
"GitHub" = "https://github.com/ManuelSG96/MAC"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]